Verifikacija email adrese osposobljena

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,15 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EmailSettings": {
+    "SmtpServer": "sandbox.smtp.mailtrap.io",
+    "SmtpPort": 2525,
+    "SmtpUsername": "925869180509f6",
+    "SmtpPassword": "9634d973dacb98",
+    "FromEmail": "noreply@autodijelovi.com",
+    "EnableSsl": true
+  }
+
 }
